--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation "androidx.work:work-runtime:2.9.0"
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    def camerax_version = "1.3.4"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_version"
+    implementation "com.google.mlkit:barcode-scanning:17.3.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+
+    \
 }
