--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission
+        android:name="android.permission.USE_EXACT_ALARM"
+        tools:targetApi="34" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+
 
     <application
         android:allowBackup="true"
@@ -13,16 +29,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GroceryManagement"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true" >
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
-            android:name=".NotificationAssistant"
-            android:exported="false" />
-        <activity
-            android:name=".FirestoreCollection"
-            android:exported="false" />
-        <activity
-            android:name=".account.SignInActivity"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,23 +52,54 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".account.SignUpActivity"
+            android:name=".SnoozeOptionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SnoozeSettingActivity"
             android:exported="false" />
         <activity
             android:name=".ProductDetail"
             android:exported="false" />
         <activity
-            android:name=".model.GroceryBatch"
+            android:name=".AddItemActivity"
             android:exported="false" />
         <activity
-            android:name=".model.GroceryItem"
-            android:exported="false" />
+            android:name=".account.SignInActivity"
+            android:exported="true" />
         <activity
-            android:name=".addItem.AddItemActivity"
+            android:name=".account.SignUpActivity"
             android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+
+        <receiver
+            android:name=".BootReceiver"
+            android:directBootAware="true"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".ScreenWakeReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".NotificationService"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="my.edu.utar.grocerymanagement.CHECK_NOTIFICATIONS" />
+                <action android:name="my.edu.utar.grocerymanagement.CHECK_NOTIFICATIONS_RETRY" />
+                <action android:name="my.edu.utar.grocerymanagement.MARK_SEEN" />
+                <action android:name="my.edu.utar.grocerymanagement.SNOOZE_TO_TIME" />
+                <!-- Debug trigger -->
+                <action android:name="my.edu.utar.grocerymanagement.DEBUG_SHOW_NOTIFICATION" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
